--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Currently I'm working on the position of Editor of Statistics and Computer Science Students' Association. 
             And also I'm a International Rated Chess Player with FIDE ID of 9984496 and a member of the Chess Team of University of Kelaniya. 
             Beside all of them, most of the people known me as a Graphic Designer.</p>
-        <img src="/Users/thisalchamodya022/Desktop/VS Code/My Website/My Images/Untitled-1.jpg" alt="Thisal Chamodya Here">
+        <img src="My Images/Untitled-1.jpg" alt="Thisal Chamodya Here">
 
         <h2 class="intro"><strong><em>Qualifications</em></strong></h2>
         <p>
